; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_sco.c_BTM_CreateSco.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_sco.c_BTM_CreateSco.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_19__ = type { i32, %struct.TYPE_14__ }
%struct.TYPE_14__ = type { i64, %struct.TYPE_17__, %struct.TYPE_15__* }
%struct.TYPE_17__ = type { i32 }
%struct.TYPE_15__ = type { i64, i64, i32, i32*, i32*, %struct.TYPE_13__, i64 }
%struct.TYPE_13__ = type { %struct.TYPE_17__, %struct.TYPE_12__ }
%struct.TYPE_12__ = type { i32 }

@BTM_NO_RESOURCES = common dso_local global i64 0, align 8
@BD_ADDR_LEN = common dso_local global i32 0, align 4
@BTM_ACL_SWKEY_STATE_IDLE = common dso_local global i64 0, align 8
@BTM_BUSY = common dso_local global i64 0, align 8
@BTM_CMD_STARTED = common dso_local global i64 0, align 8
@BTM_IGNORE_SCO_PKT_TYPE = common dso_local global i32 0, align 4
@BTM_INVALID_HCI_HANDLE = common dso_local global i32 0, align 4
@BTM_INVALID_SCO_INDEX = common dso_local global i32 0, align 4
@BTM_LINK_TYPE_SCO = common dso_local global i64 0, align 8
@BTM_MAX_SCO_LINKS = common dso_local global i32 0, align 4
@BTM_PM_MD_ACTIVE = common dso_local global i32 0, align 4
@BTM_PM_MD_PARK = common dso_local global i64 0, align 8
@BTM_PM_MD_SNIFF = common dso_local global i64 0, align 8
@BTM_PM_SET_ONLY_ID = common dso_local global i32 0, align 4
@BTM_SCO_EXCEPTION_PKTS_MASK = common dso_local global i32 0, align 4
@BTM_SCO_LINK_ONLY_MASK = common dso_local global i32 0, align 4
@BTM_SCO_SUPPORTED_PKTS_MASK = common dso_local global i32 0, align 4
@BTM_SUCCESS = common dso_local global i64 0, align 8
@BTM_UNKNOWN_ADDR = common dso_local global i64 0, align 8
@BTM_WRONG_MODE = common dso_local global i64 0, align 8
@BT_TRANSPORT_BR_EDR = common dso_local global i32 0, align 4
@FALSE = common dso_local global i64 0, align 8
@HCI_LINK_TYPE_ESCO = common dso_local global i64 0, align 8
@SCO_ST_CONNECTING = common dso_local global i64 0, align 8
@SCO_ST_LISTENING = common dso_local global i64 0, align 8
@SCO_ST_PEND_ROLECHANGE = common dso_local global i64 0, align 8
@SCO_ST_PEND_UNPARK = common dso_local global i64 0, align 8
@SCO_ST_UNUSED = common dso_local global i64 0, align 8
@TRUE = common dso_local global i64 0, align 8
@btm_cb = common dso_local global %struct.TYPE_19__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @BTM_CreateSco(i32 %0, i64 %1, i32 %2, i32* %3, i32* %4, i32* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  store i32 %0, i32* %7, align 4
  store i64 %1, i64* %8, align 8
  store i32 %2, i32* %9, align 4
  store i32* %3, i32** %10, align 8
  store i32* %4, i32** %11, align 8
  store i32* %5, i32** %12, align 8
  %13 = load i64, i64* @BTM_NO_RESOURCES, align 8
  ret i64 %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
